[gd_scene load_steps=6 format=3 uid="uid://yedy1itbwck2"]

[ext_resource type="Script" uid="uid://c12bx3nntlk3g" path="res://Scripts/tip.gd" id="1_ybt62"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dn05p"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.701961)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.787759, 0.787759, 0.787759, 1)
border_blend = true

[sub_resource type="LabelSettings" id="LabelSettings_dn05p"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_auw0u"]
font_size = 8
font_color = Color(1, 0.539464, 0.170015, 1)

[sub_resource type="LabelSettings" id="LabelSettings_56rvp"]
font_size = 6
font_color = Color(0.556953, 0.556953, 0.556953, 1)

[node name="Hover_Tip" type="Panel"]
z_index = 10
offset_left = 21.0
offset_top = 1.0
offset_right = 155.0
offset_bottom = 41.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dn05p")
script = ExtResource("1_ybt62")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Name_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pontczek"
label_settings = SubResource("LabelSettings_dn05p")
horizontal_alignment = 1

[node name="Boss_Status_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Elita II"
label_settings = SubResource("LabelSettings_auw0u")
horizontal_alignment = 1

[node name="Level_Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "14 level"
label_settings = SubResource("LabelSettings_56rvp")
horizontal_alignment = 1
